# snack2graph

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/rdfs/: agent_workspace_messaging.ttl
data/results/: output.txt
data/test_data/: generated_article_1.txt  scraped_article_agent_workspace_messaging.txt
docs/: Domain_and_Ontology.md  Knowledge_Graph_Construction(Unsupervised).md  Knowledge_Graph_Construction.md  Knowledge_Graph_Construction_Pipeline.md
docs/notes/: Knowledge_Graph_Construction.md
src/: main.py
src/cli/: main.py
src/lib/: data_ingestor.py  graph_extractor.py  text_chunker.py
src/lib/graph/: entity.py  knowledge_graph.py  property.py  relationship.py
src/lib/prompts/: prompt_for_entity_extraction.txt
