[project]
name = "snack-2-graph"
version = "0.1.0"
description = "An application that parses unstructured text and constructs a Knowledge Graph with a rich web of inter-connected relationships using FalkorDB."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12.0",
]

[project.scripts]
kg-cli = "main:app"

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]
